# scrape_and_answer_review_bot

./: playground.ipynb  pyproject.toml  sample.sqlite-journal
reviewapi/: __init__.py  api.py  main.py
reviewapi/utils/generate_response/: __init__.py  bs_bloom.py  generate.py  openai_gpt3.py  translation_check.py
reviewapi/utils/manage_data/: __init__.py  check_db.py  update_db.py
reviewapi/utils/playwright_tools/: __init__.py  extract_comment_link.py  extract_review.py  fetch_reviews.py
